# virtual-contributor-engine-expert

./: .dockerignore  .env.default  .flake8  .gitignore  Dockerfile  README.md  _ai_adapter.py  ai_adapter.py  config.py  db_client.py  docker-compose.yaml  graph.py  ingest.py  logger.py  main.py  models.py  prompts.py  pyproject.toml  utils.py  virtual_contributor.py  virtual_contributor_engine_expert.py
alkemio_virtual_contributor_engine/: alkemio_vc_engine.py  config.py  rabbitmq.py
data/: callout-0ac80071-cd92-473e-942b-4b7524033146.txt  callout-10ce8d3a-b78a-43be-a418-64772d08a5e6.txt  callout-149e7315-4529-4869-8d9b-ba5e3a05b415.txt  callout-15d72ecc-9f44-4b13-b09a-d8fc818bea7d.txt  callout-164a7437-131f-47cc-8f58-70a442087568.txt  callout-1f7e2df9-5dbe-4532-b131-b0fbc8fedc50.txt  callout-1fd7394f-3c5e-4561-8a68-ab09db7f6707.txt  callout-27d41318-e069-44dd-9243-2599108a2851.txt  callout-2e47e530-9857-4064-9b02-81b663f71e3c.txt  callout-2e726c6b-a853-484e-a63b-93f4a8556cb1.txt  callout-2f667d77-5285-421d-b5f3-834ec6b1d934.txt  callout-3876d762-d34c-48e5-b500-306d6f7e16dd.txt  callout-3b1ce111-4d25-41a3-b846-d59aedb45f89.txt  callout-45deb638-6f97-4718-bf38-773f2154b38d.txt  callout-4766e680-8994-4509-acf7-36362d72c63d.txt  callout-58d88179-d778-4ccf-86a6-3d231da8fcf6.txt  callout-5a38d06c-d659-47d0-8ab8-8bbe588dc4b5.txt  callout-614ff007-04a4-4b3e-9612-3a2f5f5f180c.txt  callout-635c97ac-0018-44e5-bad2-9cde0964054e.txt  callout-68a1aaeb-1337-462a-a187-ba1c4d73828d.txt  callout-68d58026-c576-4fab-bc50-b2a3818bcfe9.txt  callout-68db2c49-4ec4-43d2-be0f-b8ae00bef594.txt  callout-6c142268-bdf2-400c-9815-448b736f1c71.txt  callout-7c625608-c4f5-4c9b-8276-f3fa7d7c593b.txt  callout-81b04772-871d-4002-9e06-b40b03c863f1.txt  callout-82d6b188-a25c-4127-854a-cf09becb358d.txt  callout-830b0706-53e8-4936-a886-e656ca44dc32.txt  callout-84b11edd-cd66-4b4c-b90c-b5dbb6374250.txt  callout-85c83ed6-1a43-4410-a8a6-5f11178ba2ac.txt  callout-88a632a5-61dd-420d-8b72-795f98225139.txt  callout-9aca7d9a-68df-49eb-85dc-8df282fd0989.txt  callout-9bef91ce-a8cf-44da-ad04-4c5a60b51f6b.txt  callout-a03cb3ef-667b-4409-8778-bf718de41fe2.txt  callout-a5b04b6d-7f88-40ec-b0e8-481e1301db2e.txt  callout-a6117b14-a3a4-47a3-918e-f19c87a09908.txt  callout-aa44e6c3-963d-4c79-b951-770770f03385.txt  callout-aaa89642-ea78-4406-8f60-3f7e7704b894.txt  callout-ace1b010-264e-42e4-9c67-697474a9eef9.txt  callout-b6840375-f511-43fb-bc49-54472da361cc.txt  (+29 more)
prompt_graph/: edge.py  (+7 more)
(+14 files in other folders)
