[tool.poetry]
name = "virtual-contributor-engine-expert"
version = "0.14.0"
description = "Alkemio Generative AI Virtul Persona"
authors = ["Alkemio BV <info@alkem.io>"]
license = "EUPL-1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
langchain-community = "0.3.30"
load-dotenv = "0.1.0"
async-timeout = "5.0.1"
aio-pika = "9.5.7"
aiormq = "6.9.0"
langgraph = "^0.6.8"
langchain-mistralai = "^0.2.12"
pydantic = "2.11.9"
json-schema-to-pydantic = "^0.4.3"
alkemio-virtual-contributor-engine = {path = "../alkemio-virtual-contributor-engine"}

[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

