[tool.poetry]
name = "virtual-contributor-engine-expert"
version = "0.18.0"
description = "Alkemio Generative AI Virtul Persona"
authors = ["Alkemio BV <info@alkem.io>"]
license = "EUPL-1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
langchain-community = "0.3.30"
load-dotenv = "0.1.0"
async-timeout = "5.0.1"
aio-pika = "9.5.7"
aiormq = "6.9.0"
pydantic = "2.11.9"
json-schema-to-pydantic = "^0.4.3"
langgraph = "^1.0.4"
alkemio-virtual-contributor-engine = {git = "https://git@github.com/alkem-io/virtual-contributor-engine.git", rev = "v0.5.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

